<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".IntervalActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="285sp"
        android:layout_height="0dp"
        android:layout_marginTop="104dp"
        android:background="@color/white"
        app:cardCornerRadius="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16sp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/intervalImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="268sp"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:columnOrderPreserved="false"
        android:padding="10sp"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.467">

        <!-- 1 -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="8sp"
            android:layout_marginBottom="5sp"
            android:layout_marginRight="5sp"
            app:cardElevation="8sp">

            <Button
                android:id="@+id/b_answer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/asBackgroundColor"
                android:text="@string/unison"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="5sp"
            android:layout_marginRight="5sp"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp">

            <Button
                android:id="@+id/b_answer2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/asBackgroundColor"
                android:text="@string/minorSecond"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="8sp"
            android:layout_marginBottom="5sp"
            app:cardElevation="8sp">

            <Button
                android:id="@+id/b_answer3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/asBackgroundColor"
                android:text="@string/majorSecond"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="8sp"
            android:layout_marginBottom="5sp"
            android:layout_marginRight="5sp"
            app:cardElevation="8sp">

            <Button
                android:id="@+id/b_answer4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/asBackgroundColor"
                android:text="@string/minorThird"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="5sp"
            android:layout_marginRight="5sp"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp">

            <Button
                android:id="@+id/b_answer5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/asBackgroundColor"
                android:text="@string/majorThird"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="5sp"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp">

            <Button
                android:id="@+id/b_answer6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/asBackgroundColor"
                android:text="@string/perfectFourth"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="5sp"
            android:layout_marginRight="5sp"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp">

            <Button
                android:id="@+id/b_answer7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/asBackgroundColor"
                android:text="@string/perfectFifth"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="5sp"
            android:layout_marginRight="5sp"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp">

            <Button
                android:id="@+id/b_answer8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/asBackgroundColor"
                android:text="@string/minorSixth"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="5sp"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp">

            <Button
                android:id="@+id/b_answer9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/asBackgroundColor"
                android:text="@string/majorSixth"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>
        <!-- 2 -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp">

            <Button
                android:id="@+id/b_answer10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/asBackgroundColor"
                android:text="@string/minorSeventh"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <!-- 3 -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp">

            <Button
                android:id="@+id/b_answer11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/asBackgroundColor"
                android:text="@string/majorSeventh"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <!-- 4 -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="5sp"
            app:cardCornerRadius="8sp"
            app:cardElevation="8sp">

            <Button
                android:id="@+id/b_answer12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/asBackgroundColor"
                android:text="@string/octave"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>
    </GridLayout>




</androidx.constraintlayout.widget.ConstraintLayout>